# duppler

./: .gitignore  README.md  pyproject.toml  requirements.txt
duppler/: __main__.py  app.py  recycler.py  scanner.py  strings.py
